--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 							<header>
 								<h1><a href="index.html" id="logo">i.Scout Digital.</a></h1>
 								<hr />
-								<p>Be awesome on the internet.</p>
+								<p>Be awesome on the internet. The UNOFFICIAL Guide to Scouting Online.</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
@@ -31,21 +31,21 @@
 								<li>
 									<a href="#">Social Media</a>
 									<ul>
-										<li><a href="#">Facebook</a></li>
-										<li><a href="#">Twitter</a></li>
-										<li><a href="#">Tone Of Voice</a></li>
+										<li><a href="facebook.html">Facebook</a></li>
+										<li><a href="twitter.html">Twitter</a></li>
+										<li><a href="tone.html">Tone Of Voice</a></li>
 									</ul>
                                     
 								</li>
                                 <li>
 									<a href="#">Branding</a>
 									<ul>
-										<li><a href="#">Colours</a></li>
-										<li><a href="#">Documents</a></li>
-										<li><a href="#">Typography</a></li>
+										<li><a href="colours.html">Colours</a></li>
+										<li><a href="resources.html">Resources</a></li>
+										<li><a href="typography.html">Typography</a></li>
                                     </ul>
 								</li>
-								<li><a href="">Photography</a></li>
+								<li><a href="photography.html">Photography</a></li>
 							</ul>
 						</nav>
 
@@ -103,7 +103,7 @@
 										<header>
 											<h3>Questions?</h3>
 										</header>
-										<p>All of the content on this website is sourced from the Official Brand Guidelines, however if in doubt please refer to Official Documents or your Media Development Manager (or equivalent).</p>
+										<p>Most of the content on this website is sourced from the Official Brand Guidelines and was correct as of April 2016. If in doubt please refer to Official Documents or your Media Development Manager (or equivalent).</p>
 										<ul class="icons">
 											<li><a href="https://twitter.com/scouts" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="https://www.facebook.com/UKScouts/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
