--- a/colours.html
+++ b/colours.html
@@ -56,7 +56,7 @@
 							<header>
 								<h2><a href="#">Colours</a></h2>
 								<p>
-									Not just any Purple, it's #4D2177!
+									Not just any Purple.
 								</p>
 							</header>
 							<section>
