--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Welcome to <strong>i.Scout Digital</strong>.</h2>
+						<h2>Welcome to <strong>i.Scout Digital</strong></h2>
 						<p>
-                            We know how <strong>awesome</strong> Scouting is; We think it's important to show the world how awesome we are, through Social Media.<br><br> Scouting has a <strong>house style</strong> - certain <strong>colours</strong>, <strong>images</strong> and <strong>fonts</strong> that, when people look at, instantly tells them that this is Scouting.
+                            We know how <strong>awesome</strong> Scouting is; we think it's important to show the world how awesome we are, through Social Media.<br><br> Scouting has a <strong>house style</strong> - certain <strong>colours</strong>, <strong>images</strong> and <strong>fonts</strong> that, when people look at, instantly tells them that this is Scouting.
                         </p>
 					</header>
 				</section>
