--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 									<div class="copyright">
 										<ul class="menu">
 											<li>Base Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                                            <li>Developed by <a href="http://tombell.rocks">Tom Bell</a></li>
 										</ul>
 									</div>
 
